--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="sidebar-title"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" /></svg>Dashboard</div>
             <ul>
                 <li></li>
-                <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" /></svg>Home</li>
+                <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" /></svg><div>Home</div></li>
                 <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M2,3H22C23.05,3 24,3.95 24,5V19C24,20.05 23.05,21 22,21H2C0.95,21 0,20.05 0,19V5C0,3.95 0.95,3 2,3M14,6V7H22V6H14M14,8V9H21.5L22,9V8H14M14,10V11H21V10H14M8,13.91C6,13.91 2,15 2,17V18H14V17C14,15 10,13.91 8,13.91M8,6A3,3 0 0,0 5,9A3,3 0 0,0 8,12A3,3 0 0,0 11,9A3,3 0 0,0 8,6Z" /></svg>Profile</li>
                 <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22,4C22,2.89 21.1,2 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z" /></svg>Messages</li>
                 <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12S17.5 2 12 2M17 13H11V7H12.5V11.5H17V13Z" /></svg>History</li>
@@ -29,7 +29,7 @@
         </div>
         <div class="dashboard">
             <div class="projects">
-                <div class="title">Your Projects</div>
+                <div class="dashboard-title">Your Projects</div>
                 <div class="projects-cards">
                     <div class="card">
                         <div><p class="title">Super Cool Project</p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus odio labore magni amet aliquid. Hic perspiciatis, harum voluptatem consequatur, enim totam mollitia at voluptas est aliquam odio cupiditate praesentium voluptates!</div>
@@ -83,8 +83,8 @@
             </div>
 
             <div class="announcements">
-                <div class="title">Announcements</div>
-                <div class="announcement-container">
+                <div class="dashboard-title">Announcements</div>
+                <div class="announcement-container" id="d1">
                     <div class="announcement-card">
                         <p class="title">Site Maintenance</p>
                         <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...</p>
@@ -101,7 +101,7 @@
             </div>
 
             <div class="trending">
-                <div class="title">Trending</div>
+                <div class="dashboard-title">Trending</div>
                 <div class="trending-container">
                     <div class="trending-card">World Peace Builder</div>
                     <div class="trending-card">Super Cool Project</div>
