--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@
           </ul>
         </div>
         <div class="header">
-            B
+            <div class="search">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg>
+                <input type="text">
+            </div>
+            <div class="header-icons">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M10,21H14A2,2 0 0,1 12,23A2,2 0 0,1 10,21M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M17,11A5,5 0 0,0 12,6A5,5 0 0,0 7,11V18H17V11M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" /></svg>
+                <img src="./imgs/man.jpg" alt="man icon">
+                <div class="title">Morgan Oakley</div>
+            </div>
+            <div class="user-info">
+                <img src="./imgs/man.jpg" alt="man icon">
+                <div class="title welcome-message">Hi there,</div>
+                <div class="title account-name">Morgan Oakley (@morgan)</div>
+            </div>
+            <div class="header-buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
         </div>
         <div class="dashboard">
             <div class="projects">
@@ -89,10 +107,12 @@
                         <p class="title">Site Maintenance</p>
                         <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...</p>
                     </div>
+                    <hr>
                     <div class="announcement-card">
                         <p class="title">Community Share Day</p>
                         <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</p>
                     </div>
+                    <hr>
                     <div class="announcement-card">
                         <p class="title">Updated Privacy Policy</p>
                         <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</p>
@@ -103,10 +123,26 @@
             <div class="trending">
                 <div class="dashboard-title">Trending</div>
                 <div class="trending-container">
-                    <div class="trending-card">World Peace Builder</div>
-                    <div class="trending-card">Super Cool Project</div>
-                    <div class="trending-card">Life Changing App</div>
-                    <div class="trending-card">No Traffic Maker</div>
+                    <div class="trending-card">
+                        <img src="./imgs/cat.jpg" alt="cat icon">
+                        <div class="title">@tegan</div>
+                        <div class="trending-name">World Peace Builder</div>
+                    </div>
+                    <div class="trending-card">
+                        <img src="./imgs/man.jpg" alt="man icon">
+                        <div class="title">@morgan</div>
+                        <div class="trending-name">Super Cool Project</div>
+                    </div>
+                    <div class="trending-card">
+                        <img src="./imgs/cheeta.jpg" alt="cheeta icon">
+                        <div class="title">@kendall</div>
+                        <div class="trending-name">Life Changing App</div>
+                    </div>
+                    <div class="trending-card">
+                        <img src="./imgs/goose.jpg" alt="goose icon">
+                        <div class="title">@alex</div>
+                        <div class="trending-name">No Traffic Maker</div>
+                    </div>
                 </div>
             </div>
         </div>
