Complete header section
Formed header section from 4 subcontainers, and aligned contents.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="title">Morgan Oakley</div>
             </div>
             <div class="user-info">
-                <img src="./imgs/man.jpg" alt="man icon">
+                <img src="./imgs/man.jpg" alt="man icon" id="user-image">
                 <div class="title welcome-message">Hi there,</div>
                 <div class="title account-name">Morgan Oakley (@morgan)</div>
             </div>
